--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -8,11 +8,15 @@
   </head>
   <link rel = "stylesheet" href= "styles.css">
   <styles>
-    
+    p {
+      backgound-color:green;
+      color:white;
+      font-size:18px
+    }
   </styles>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="background-color:orange; font-size;18px;">Inline Method</button>
   </body>
 </html>
