--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="header">
+      <div class = "left">
       <div class="logo">
         LOGO
       </div>
@@ -22,5 +23,6 @@
       </button>
       <div class="profile-image"></div>
     </div>
+  </div>
   </body>
 </html>
